WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120983
gtest fails to build due to integer type mismatch in WTF::insertIntoBoundedVector()
https://bugs.webkit.org/show_bug.cgi?id=120983
Summary
gtest fails to build due to integer type mismatch in WTF::insertIntoBoundedVe...
David Kilzer (:ddkilzer)
Reported
2013-09-07 18:02:55 PDT
When gtest builds for the Debug configuration, I see the following error: WebKitBuild/Debug/usr/local/include/wtf/StdLibExtras.h:266:23: error: implicit conversion loses integer precision: 'size_t' (aka 'unsigned long') to 'unsigned int' [-Werror,-Wshorten-64-to-32] for (unsigned i = size; i-- > index + 1;) ~ ^~~~ 1 error generated.
Attachments
Patch v1
(1.68 KB, patch)
2013-09-07 18:07 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2013-09-07 18:07:22 PDT
Created
attachment 210941
[details]
Patch v1
WebKit Commit Bot
Comment 2
2013-09-07 20:45:23 PDT
Comment on
attachment 210941
[details]
Patch v1 Clearing flags on attachment: 210941 Committed
r155280
: <
http://trac.webkit.org/changeset/155280
>
WebKit Commit Bot
Comment 3
2013-09-07 20:45:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug