gtest fails to build due to integer type mismatch in WTF::insertIntoBoundedVector() <http://webkit.org/b/120983>

Reviewed by Dan Bernstein.

Fixes the following build failure:

    WebKitBuild/Debug/usr/local/include/wtf/StdLibExtras.h:266:23: error: implicit conversion loses integer precision: 'size_t' (aka 'unsigned long') to 'unsigned int' [-Werror,-Wshorten-64-to-32]
    for (unsigned i = size; i-- > index + 1;)
                  ~   ^~~~

* wtf/StdLibExtras.h:
(WTF::insertIntoBoundedVector): Use size_t instead of unsigned
as for loop index variable.


Canonical link: https://commits.webkit.org/138884@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155280 268f45cc-cd09-0410-ab3c-d52691b4dbfc